check if linter pass the aproach

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,267 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+
+    <title>Museum</title>
+
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/favicon.png"
+    />
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <aside
+      class="page__menu menu"
+      id="menu"
+      onclick="window.location.href='#'"
+    >
+      <div class="menu__wrapper container">
+        <div class="menu__navigation">
+          <a
+            href="#"
+            class="menu__link"
+          >
+            <img
+              src="./images/icons/close.png"
+              alt="close image"
+              class="menu__close"
+            />
+          </a>
+
+          <nav class="menu__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#galery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#about"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#exhibitions"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <article class="header__working-hours working-hours">
+          <div class="working-hours__schedule-wrapper">
+            <h4 class="working-hours__title">Графік роботи</h4>
+
+            <ul class="working-hours__schedule">
+              <li class="working-hours__day">
+                <span class="working-hours__time">12:00 — 20:00</span>
+                середа
+              </li>
+
+              <li class="working-hours__day">
+                <span class="working-hours__time">12:00 — 20:00</span>
+                четвер
+              </li>
+
+              <li class="working-hours__day">
+                <span class="working-hours__time">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+
+              <li class="working-hours__day">
+                <span class="working-hours__time">11:00 — 19:00</span>
+                субота
+              </li>
+
+              <li class="working-hours__day">
+                <span class="working-hours__time">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+          </div>
+
+          <p class="working-hours__detalization">
+            Вихідні: понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </article>
+      </div>
+    </aside>
+
+    <header class="page__header">
+      <div class="container header">
+        <a
+          href="#menu"
+          class="header__menu-open"
+        >
+          <svg
+            role="img"
+            aria-labelledby="description-svg-icon-menu"
+            class="page__menu-icon"
+            width="18"
+            height="12"
+            viewBox="0 0 18 12"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <desc id="description-svg-icon-menu">The menu open image.</desc>
+            <path
+              class="menu-vector"
+              d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
+              fill="#0F0E08"
+            />
+          </svg>
+        </a>
+        <div class="header__title-wrapper">
+          <h1 class="title header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a
+            href="#"
+            class="header__button button"
+          >
+            КВИТКИ
+          </a>
+          <p class="header__actions">події</p>
+        </div>
+        <div class="header__img">
+          <img
+            src="./images/icons/logo.png"
+            alt="NA MU Conpamy logotype"
+            class="header__logo"
+          />
+        </div>
+      </div>
+    </header>
+
+    <main class="page__main">
+      <section
+        class="exhibitions"
+        id="exhibitions"
+      >
+        <div class="container exhibitions__wrapper">
+          <h3 class="exhibitions__title title title-m">Актуальні події</h3>
+
+          <ul class="exhibitions__events">
+            <li class="exhibitions__event">
+              <article class="event">
+                <picture class="event__img">
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="./images/pictures/event/event-1-m.png"
+                  />
+                  <source
+                    media="(min-width: 980px)"
+                    srcset="./images/pictures/event/event-1.png"
+                  />
+                  <img
+                    src="./images/pictures/event/event-1.png"
+                    alt="Exhibitioin event description"
+                  />
+                </picture>
+
+                <div class="event__wrapper">
+                  <p class="event__data">
+                    <span class="event__data-event">ВИСТАВКА</span>
+                    <span class="event__data-value">26.08-29.11.2019</span>
+                  </p>
+                  <h4 class="event__name title title--s">Йду і повертаюсь</h4>
+                  <p class="event__description">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+            </li>
+
+            <li class="exhibitions__event">
+              <article class="event">
+                <picture class="event__img">
+                  <source
+                    media="(min-width: 320px)"
+                    srcset="./images/pictures/event/event-2-m.png"
+                  />
+                  <source
+                    media="(min-width: 1280px)"
+                    srcset="./images/pictures/event/event-2.png"
+                  />
+                  <img
+                    src="./images/pictures/event/event-2.png"
+                    alt="Exhibitioin event description"
+                  />
+                </picture>
+
+                <div class="event__wrapper">
+                  <p class="event__data">
+                    <span class="event__data-event">ВИСТАВКА</span>
+                    <span class="event__data-value">26.08-29.11.2019</span>
+                  </p>
+                  <h4 class="event__name title title--s">І спогади і мрії</h4>
+                  <p class="event__description">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="lectures">
+        <ul class="lectures__list">
+          <li class="lecture__item">
+            <article class="lecture"></article>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer class="page__footer"></footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
