--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,311 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/NAMU-logo.png"
+      type="image/png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Montserrat:wght@100..900&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body" id="home">
+    <header class="header">
+      <div class="container">
+        <div class="top-bar">
+          <a href="#menu" class="icon icon__menu top-bar__burger-menu"></a>
+          <a href="#home" class="top-bar__logo-link">
+            <img
+              src="./images/NAMU-logo.png"
+              alt="NAMU logo"
+              class="top-bar__logo"
+            >
+          </a>
+        </div>
+      </div>
+      <div class="header__content">
+        <div class="header__content-photo"></div>
+
+        <div class="header__content-info">
+          <div class="container">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <div class="header__tickets">
+              <p class="subtitle header__tickets-subtitle">КВИТКИ</p>
+              <div class="header__tickets-arrow arrow-container">
+                <a href="#tickets" class="icon icon__arrow"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <nav class="nav menu__nav">
+          <a href="#" class="icon icon__close"></a>
+          <ul class="nav__list">
+            <div class="nav__list-flex">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </div>
+            <div class="nav__list-flex">
+              <li class="nav__item">
+                <a
+                  href="#about-us"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contacts"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </div>
+          </ul>
+        </nav>
+
+        <div class="schedule menu__schedule">
+          <p class="schedule__text schedule__title">Графік роботи</p>
+          <p class="schedule__text schedule__info">
+            <span class="schedule__span">12:00 — 20:00</span> середа<br>
+            <span class="schedule__span">12:00 — 20:00</span> четвер<br>
+            <span class="schedule__span">12:00 — 20:00</span> п’ятниця<br>
+            <span class="schedule__span">11:00 — 19:00</span> субота<br>
+            <span class="schedule__span">11:00 — 19:00</span> неділя
+          </p>
+          <p class="schedule__text">
+            <span class="schedule__span">Вихідні:</span> понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+      <div class="menu__semitransparency"></div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="events" id="events">
+            <h2 class="section__title">Актуальні події</h2>
+            <div class="events__content">
+              <article class="event events__event">
+                <img
+                  src="./images/events/going-returning.png"
+                  alt="Exhibition photo"
+                  class="event__photo"
+                >
+                <div class="event__info">
+                  <p>ВИСТАВКА</p>
+                  <p>26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title">Йду і повертаюсь</h3>
+                <p class="event__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </article>
+
+              <article class="event events__event">
+                <img
+                  src="./images/events/memories-dreams.png"
+                  alt="Exhibition photo"
+                  class="event__photo"
+                >
+                <div class="event__info">
+                  <p>ВИСТАВКА</p>
+                  <p>26.08-29.11.2019</p>
+                </div>
+                <h3 class="event__title">І спогади і мрії</h3>
+                <p class="event__description">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </article>
+              <div class="events__lecture">
+                <!-- <img
+                  src="./images/events/lecture-photo.png"
+                  alt="Lecture photo"
+                  class="lecture__photo"
+                > -->
+                <div class="lecture__description">
+                  <div class="lecture__info event__info">
+                    <p>ЛЕКЦІЯ</p>
+                    <p>26/08/2019 - 11:00</p>
+                  </div>
+                  <h3 class="lecture__title event__title">Від класицизму до романтизму</h3>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="gallery" id="gallery">
+            <h2 class="section__title">Галерея</h2>
+            <img src="./images/gallery/slider-woman.png" alt="Ukrainian woman">
+          </section>
+          <section class="subscription">
+            <div class="subscription__info">
+              <h2 class="section__title">Підписка</h2>
+              <p class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            </div>
+            <form
+              action="#"
+              method="post"
+              class="subscription__form"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="email"
+                name="subscription-email"
+                class="subscription__input"
+                placeholder="E-mail"
+                required
+              />
+              <div class="arrow-container">
+                <button class="icon icon__arrow">
+                  <img src="./images/icons/arrow-black.png" alt="arrow">
+                </button>
+              </div>
+            </form>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer_logos-bar">
+          <a href="#home" class="top-bar__logo-link">
+            <img
+              src="./images/NAMU-logo.png"
+              alt="NAMU logo"
+              class="top-bar__logo footer__logo"
+            >
+          </a>
+          <div class="footer__socials">
+            <a href="#facebook"></a>
+            <a href="#instagram"></a>
+          </div>
+        </div>
+        <div class="schedule footer__schedule">
+          <p>Графік роботи</p>
+          <p>
+            <span>12:00 — 20:00</span> середа<br>
+            <span>12:00 — 20:00</span> четвер<br>
+            <span>12:00 — 20:00</span> п’ятниця<br>
+            <span>11:00 — 19:00</span> субота<br>
+            <span>11:00 — 19:00</span> неділя
+          </p>
+          <p>
+            <span>Вихідні:</span> понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+        <div class="footer__contacts">
+          <p>Контакти:</p>
+          <a
+            href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4494431,30.5281844,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?authuser=0&entry=ttu"
+            class="footer__contacts-link"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+          <a
+            href="tel:+38 (044) 278-13-57"
+            class="footer__contacts-link"
+          >
+            тел. +38 (044) 278-13-57
+          </a>
+          <a
+            href="fax:+38 (044) 278-74-54"
+            class="footer__contacts-link"
+          >
+            факс +38 (044) 278-74-54
+          </a>
+          <a
+            href="mailto:info@namu.kiev.ua"
+            class="footer__contacts-link"
+          >
+            e-mail: info@namu.kiev.ua
+          </a>
+        </div>
+        <button>
+          <a href="#home"></a>
+        </button>
+        <nav class="nav footer__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a
+                href="#gallery"
+                class="nav__link"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#events"
+                class="nav__link"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#about-us"
+                class="nav__link"
+              >
+                Про нас
+              </a>
+            </li>
+            <li class="nav__item">
+              <a
+                href="#contacts"
+                class="nav__link"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__credits">
+          <p>Designed by Zhyriada Marina</p>
+          <p>Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
