--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
-      crossorigin
+      crossorigin="anonymous"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@100..900&display=swap"
@@ -35,7 +35,7 @@
     />
   </head>
   <body class="page">
-    <aside
+    <!--   <aside
       class="page__menu menu"
       id="menu"
       onclick="window.location.href='#'"
@@ -94,7 +94,7 @@
           </nav>
         </div>
 
-        <article class="header__working-hours working-hours">
+        <article class="menu__working-hours working-hours">
           <div class="working-hours__schedule-wrapper">
             <h4 class="working-hours__title">Графік роботи</h4>
 
@@ -133,33 +133,33 @@
           </p>
         </article>
       </div>
-    </aside>
+    </aside> -->
 
     <header class="page__header">
       <div class="container header">
-        <a
-          href="#menu"
-          class="header__menu-open"
-        >
-          <svg
-            role="img"
-            aria-labelledby="description-svg-icon-menu"
-            class="page__menu-icon"
-            width="18"
-            height="12"
-            viewBox="0 0 18 12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <desc id="description-svg-icon-menu">The menu open image.</desc>
-            <path
-              class="menu-vector"
-              d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
-              fill="#0F0E08"
-            />
-          </svg>
-        </a>
         <div class="header__title-wrapper">
+          <a
+            href="#menu"
+            class="header__menu-open"
+          >
+            <svg
+              role="img"
+              aria-labelledby="description-svg-icon-menu"
+              class="page__menu-icon"
+              width="18"
+              height="12"
+              viewBox="0 0 18 12"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <desc id="description-svg-icon-menu">The menu open image.</desc>
+              <path
+                class="menu-vector"
+                d="M0 12H18V10H0V12ZM0 7H18V5H0V7ZM0 0V2H18V0H0Z"
+                fill="#0F0E08"
+              />
+            </svg>
+          </a>
           <h1 class="title header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <a
             href="#"
@@ -170,11 +170,16 @@
           <p class="header__actions">події</p>
         </div>
         <div class="header__img">
-          <img
-            src="./images/icons/logo.png"
-            alt="NA MU Conpamy logotype"
-            class="header__logo"
-          />
+          <a
+            href="/"
+            class="header__logo-link"
+          >
+            <img
+              src="./images/icons/logo.png"
+              alt="NA MU Conpamy logotype"
+              class="header__logo"
+            />
+          </a>
         </div>
       </div>
     </header>
@@ -185,7 +190,7 @@
         id="exhibitions"
       >
         <div class="container exhibitions__wrapper">
-          <h3 class="exhibitions__title title title-m">Актуальні події</h3>
+          <h2 class="exhibitions__title title title-m">Актуальні події</h2>
 
           <ul class="exhibitions__events">
             <li class="exhibitions__event">
@@ -210,7 +215,7 @@
                     <span class="event__data-event">ВИСТАВКА</span>
                     <span class="event__data-value">26.08-29.11.2019</span>
                   </p>
-                  <h4 class="event__name title title--s">Йду і повертаюсь</h4>
+                  <h3 class="event__name title title--s">Йду і повертаюсь</h3>
                   <p class="event__description">
                     Національний Художній Музей України презентує унікальну
                     частину колекції Градобанку - українське мистецтво другої
@@ -242,7 +247,7 @@
                     <span class="event__data-event">ВИСТАВКА</span>
                     <span class="event__data-value">26.08-29.11.2019</span>
                   </p>
-                  <h4 class="event__name title title--s">І спогади і мрії</h4>
+                  <h3 class="event__name title title--s">І спогади і мрії</h3>
                   <p class="event__description">
                     Національний художній музей України до 100 річчя від дня
                     народження видатної української художниці Тетяни Яблонської
@@ -256,17 +261,89 @@
         </div>
       </section>
 
+      <div class="wrapper-for-lectures"></div>
+
       <section class="lectures">
-        <ul class="lectures__list">
-          <li class="lecture__item">
-            <article class="lecture"></article>
-          </li>
-        </ul>
+        <div class="lectures__wrapper mb-100">
+          <ul class="lectures__list">
+            <li class="lectures__item">
+              <article class="lecture">
+                <p class="lecture__data">
+                  <span class="lecture__data-event">ЛЕКЦІЯ</span>
+                  <span class="lecture__data-value">26/08/2019 - 11:00</span>
+                </p>
+                <h3 class="lecture__name title title--s">
+                  Від класицизму до романтизму
+                </h3>
+              </article>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section
+        class="galery"
+        id="galery"
+      >
+        <div class="container mb-100">
+          <h3 class="galery__title title title-m">Галерея</h3>
+
+          <div class="galery__wrapper js-wrapper">
+            <ul class="galery__slider js-slider">
+              <li class="galery__slide js-slide">
+                <img
+                  src="./images/pictures/galery/galery-1.png"
+                  alt="Painting of women from the past in red shoes"
+                  class="galery__slide-img"
+                />
+              </li>
+
+              <li class="galery__slide js-slide">
+                <img
+                  src="./images/pictures/galery/galery-2.png"
+                  alt="Old Ukrainian village in winter paintint"
+                  class="galery__slide-img"
+                />
+              </li>
+
+              <li class="galery__slide js-slide">
+                <img
+                  src="./images/pictures/galery/galery-3.png"
+                  alt="Girl with the telephone in the park painting"
+                  class="galery__slide-img"
+                />
+              </li>
+
+              <li class="galery__slide js-slide">
+                <img
+                  src="./images/pictures/galery/galery-4.png"
+                  alt="Sea while the sun set painting"
+                  class="galery__slide-img"
+                />
+              </li>
+            </ul>
+          </div>
+
+          <div class="galery__dots-for-slider">
+            <ul class="dots js-dots">
+              <!-- <li class="dots__item js-dot"></li>
+
+              <li class="dots__item js-dot"></li>
+
+              <li class="dots__item js-dot"></li>
+
+              <li class="dots__item js-dot"></li> -->
+            </ul>
+          </div>
+        </div>
       </section>
     </main>
 
     <footer class="page__footer"></footer>
 
-    <script src="scripts/main.js"></script>
+    <script
+      src="scripts/main.js"
+      type="module"
+    ></script>
   </body>
 </html>
