--- a/src/index.html
+++ b/src/index.html
@@ -114,8 +114,9 @@
           </p>
         </div>
       </div>
-      <div class="menu__semitransparency"></div>
     </aside>
+
+    <div class="semitransparency"></div>
 
     <main class="main">
       <div class="container">
