--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,400 @@
-<!doctype html>
-<html lang="en">
+<!-- #region doctype -->
+<!DOCTYPE html>
+<html lang="en" class="page">
   <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>Title</title>
-    <link
-      rel="stylesheet"
-      href="./styles/main.scss"
-    />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <link rel="icon" href="/images/favicon.svg" >
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" >
+    <link rel="preconnect" href="https://fonts.gstatic.com" >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet" >
+    <link rel="stylesheet" href="./styles/utils/reset.scss" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" >
+    <link rel="stylesheet" href="./styles/main.scss" >
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+  <body class="page__body">
+    <!-- #endregion doctype -->
+    <!-- #region header -->
+    <header class="header" id="home">
+      <div class="header__top">
+        <div class="container">
+          <div class="header__inner">
+            <a href="#menu" class="icon icon--menu"></a>
+            <a href="#" class="logo"></a>
+          </div>
+        </div>
+      </div>
+      <div class="header__bottom">
+        <div class="container">
+          <a href="#menu" class="icon icon--menu--tablet"></a>
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__element">події</div>
+          <a href="#" class="button"> Квитки </a>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion header -->
+    <!-- #region menu -->
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__box">
+        <div class="container custom-container">
+          <div class="menu__inner">
+            <div class="menu__top">
+              <a href="#" class="icon icon--close-menu"></a>
+              <nav class="menu__navigation navigation">
+                <ul class="navigation__list">
+                  <li class="navigation__item">
+                    <a href="#gallery" class="navigation__link"> Галерея </a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#events" class="navigation__link">
+                      Виставки та <br>
+                      події
+                    </a>
+                  </li>
+                </ul>
+                <ul class="navigation__list">
+                  <li class="navigation__item">
+                    <a href="#" class="navigation__link"> Про нас </a>
+                  </li>
+                  <li class="navigation__item">
+                    <a href="#contacts" class="navigation__link"> Контакти </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="menu__bottom schedule">
+              <div class="schedule__content">
+                <div class="schedule__info">
+                  <p class="schedule__title">Графік роботи</p>
+                  <div class="schedule__text">
+                    <ul class="schedule__list">
+                      <li class="schedule__item">
+                        <strong>12:00 — 20:00</strong>
+                        середа
+                      </li>
+                      <li class="schedule__item">
+                        <strong>12:00 — 20:00</strong>
+                        четвер
+                      </li>
+                      <li class="schedule__item">
+                        <strong>12:00 — 20:00</strong>
+                        п’ятниця
+                      </li>
+                      <li class="schedule__item">
+                        <strong>11:00 — 19:00</strong>
+                        субота
+                      </li>
+                      <li class="schedule__item">
+                        <strong>11:00 — 19:00</strong>
+                        неділя
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <div class="schedule__additional-info">
+                  <strong>Вихідні:</strong>
+                  понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion menu -->
+    <!-- #region main -->
+    <main class="main">
+      <!-- #region events -->
+      <section class="main__events events" id="events">
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="event__cards card">
+            <article class="card__block">
+              <div class="card__image">
+                <img src="/images/events-block/pictupe.png" alt="picture">
+              </div>
+              <div class="card__description">
+                <div class="card__info">
+                  <p class="card__text">ВИСТАВКА</p>
+                  <p class="card__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="card__title"><span>Йду і повертаюсь</span></h3>
+                <p class="card__subtitle">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+            <article class="card__block">
+              <div class="card__image">
+                <img
+                  src="/images/events-block/pictupe-2.png"
+                  alt="picture"
+                >
+              </div>
+              <div class="card__description">
+                <div class="card__info">
+                  <p class="card__text">ВИСТАВКА</p>
+                  <p class="card__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="card__title"><span>І спогади і мрії</span></h3>
+                <p class="card__subtitle">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion events -->
+      <!-- #region lection -->
+      <section class="main__lection lection">
+        <div class="lection__content">
+          <div class="lection__info">
+            <p class="lection__text">ЛЕКЦІЯ</p>
+            <p class="lection__date">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="lection__title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+      <!-- #endregion lection -->
+      <!-- #region galley -->
+      <section class="main__gallery gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__block">
+            <div class="gallery__photo">
+              <img src="/images/gallery-block/picture.png" alt="picture" >
+            </div>
+            <div class="gallery__photo">
+              <img
+                src="/images/gallery-block/picture-2.png"
+                alt="picture"
+              >
+            </div>
+            <div class="gallery__photo">
+              <img
+                src="/images/gallery-block/picture-3.png"
+                alt="picture"
+              >
+            </div>
+            <div class="gallery__photo">
+              <img
+                src="/images/gallery-block/picture-4.png"
+                alt="picture"
+              >
+            </div>
+          </div>
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">
+                <img src="images/gallery-block/picture.png" alt="picture">
+              </div>
+              <div class="swiper-slide">
+                <img src="images/gallery-block/picture-5.png" alt="picture">
+              </div>
+              <div class="swiper-slide">
+                <img src="images/gallery-block/picture-3.png" alt="picture">
+              </div>
+              <div class="swiper-slide">
+                <img src="images/gallery-block/picture-4.png" alt="picture">
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+      <!-- #endregion galley -->
+      <!-- #region subscription -->
+      <section class="main__subscription subscription">
+        <div class="container">
+          <h2 class="subscription__title">Підписка</h2>
+          <div class="subscription__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+          <form
+            action="submit-page.php"
+            class="subscription__form"
+            method="get"
+            name="email"
+          >
+            <input
+              class="subscription__input"
+              type="email"
+              placeholder="E-mail"
+              required
+            >
+            <button class="subscription__btn"></button>
+          </form>
+        </div>
+      </section>
+      <!-- endregion subscription -->
+    </main>
+    <!-- #endregion main -->
+    <!-- #region footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__info">
+            <div class="footer__logo-and-social">
+              <a href="#" class="footer__logo">
+                <img src="/images/footer-logo.svg" alt="logo">
+              </a>
+              <div class="social">
+                <a
+                  class="social__facebook"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                >
+                  <img
+                    src="/images/icons/facebook-logo.svg"
+                    alt="facebook"
+                  >
+                </a>
+                <a
+                  class="social__facebook"
+                  href="https://www.instagram.com"
+                  target="_blank"
+                >
+                  <img
+                    src="/images/icons/instagram-logo.svg"
+                    alt="instagram"
+                  >
+                </a>
+              </div>
+            </div>
+            <div class="footer__schedule-and-contacts">
+              <div class="schedule">
+                <div class="schedule__content">
+                  <div class="schedule__info">
+                    <p class="schedule__title">Графік роботи</p>
+                    <div class="schedule__text">
+                      <ul class="schedule__list">
+                        <li class="schedule__item">
+                          <strong>12:00 — 20:00</strong>
+                          середа
+                        </li>
+                        <li class="schedule__item">
+                          <strong>12:00 — 20:00</strong>
+                          четвер
+                        </li>
+                        <li class="schedule__item">
+                          <strong>12:00 — 20:00</strong>
+                          п’ятниця
+                        </li>
+                        <li class="schedule__item">
+                          <strong>11:00 — 19:00</strong>
+                          субота
+                        </li>
+                        <li class="schedule__item">
+                          <strong>11:00 — 19:00</strong>
+                          неділя
+                        </li>
+                      </ul>
+                      <div class="schedule__additional-info">
+                        Вихідні: понеділок, вівторок
+                        <br>
+                        Каса припиняє роботу за 1 годину до закриття музею
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <nav class="footer__contacts contacts" id="contacts">
+                <p class="contacts__title">Контакти</p>
+                <ul class="contacts__list">
+                  <li class="contacts__item">
+                    <a
+                      href="https://maps.app.goo.gl/W9pmUXGbqVGzcn197"
+                      target="_blank"
+                      class="contacts__link"
+                    >
+                      вул. М. Грушевського, 6; Київ, 01001
+                    </a>
+                  </li>
+                  <li class="contacts__item">
+                    <a href="tel:+38(044)278-13-57" class="contacts__link">
+                      тел. +38 (044) 278-13-57
+                    </a>
+                  </li>
+                  <li class="contacts__item">
+                    <a href="tel:+38(044)278-74-54" class="contacts__link">
+                      факс +38 (044) 278-74-54
+                    </a>
+                  </li>
+                  <li class="contacts__item">
+                    <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                      info@namu.kiev.ua
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+              <a href="#home" class="footer__button">
+                <img
+                  src="/images/icons/arrow-up.svg"
+                  alt="arrow"
+                  class="footer__arrow-up"
+                >
+              </a>
+            </div>
+          </div>
+          <nav class="footer__navigation navigation">
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a
+                  href="#gallery"
+                  class="navigation__link navigation__link--footer"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a
+                  href="#events"
+                  class="navigation__link navigation__link--footer"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+            <ul class="navigation__list">
+              <li class="navigation__item">
+                <a href="#" class="navigation__link navigation__link--footer">
+                  Про нас
+                </a>
+              </li>
+              <li class="navigation__item">
+                <a
+                  href="#contacts"
+                  class="navigation__link navigation__link--footer"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="footer__bottom">
+          <div class="footer__bottom-copyright">
+            Designed by Zhyriada Marina
+          </div>
+          <div class="footer__bottom-designed">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion footer -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
