fix form submit, fix menu match design (center, add hover effects to footer links

--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,22 @@
 <!DOCTYPE html>
 <html lang="en" class="page">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <link rel="icon" href="/images/favicon.svg" >
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/src/images/favicon.svg">
     <title>Museum</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" >
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet" >
-    <link rel="stylesheet" href="./styles/utils/reset.scss" >
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" >
-    <link rel="stylesheet" href="./styles/main.scss" >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+   >
+    <link rel="stylesheet" href="./styles/utils/reset.scss">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+   >
+    <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body class="page__body">
     <!-- #endregion doctype -->
@@ -38,67 +44,65 @@
     <!-- #region menu -->
     <aside class="page__menu menu" id="menu">
       <div class="menu__box">
-        <div class="container custom-container">
-          <div class="menu__inner">
-            <div class="menu__top">
-              <a href="#" class="icon icon--close-menu"></a>
-              <nav class="menu__navigation navigation">
-                <ul class="navigation__list">
-                  <li class="navigation__item">
-                    <a href="#gallery" class="navigation__link"> Галерея </a>
-                  </li>
-                  <li class="navigation__item">
-                    <a href="#events" class="navigation__link">
-                      Виставки та <br>
-                      події
-                    </a>
-                  </li>
-                </ul>
-                <ul class="navigation__list">
-                  <li class="navigation__item">
-                    <a href="#" class="navigation__link"> Про нас </a>
-                  </li>
-                  <li class="navigation__item">
-                    <a href="#contacts" class="navigation__link"> Контакти </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <div class="menu__bottom schedule">
-              <div class="schedule__content">
-                <div class="schedule__info">
-                  <p class="schedule__title">Графік роботи</p>
-                  <div class="schedule__text">
-                    <ul class="schedule__list">
-                      <li class="schedule__item">
-                        <strong>12:00 — 20:00</strong>
-                        середа
-                      </li>
-                      <li class="schedule__item">
-                        <strong>12:00 — 20:00</strong>
-                        четвер
-                      </li>
-                      <li class="schedule__item">
-                        <strong>12:00 — 20:00</strong>
-                        п’ятниця
-                      </li>
-                      <li class="schedule__item">
-                        <strong>11:00 — 19:00</strong>
-                        субота
-                      </li>
-                      <li class="schedule__item">
-                        <strong>11:00 — 19:00</strong>
-                        неділя
-                      </li>
-                    </ul>
-                  </div>
+        <div class="menu__inner">
+          <div class="menu__top">
+            <a href="#" class="icon icon--close-menu"></a>
+            <nav class="menu__navigation navigation">
+              <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a href="#gallery" class="navigation__link"> Галерея </a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#events" class="navigation__link">
+                    Виставки та <br>
+                    події
+                  </a>
+                </li>
+              </ul>
+              <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a href="#" class="navigation__link"> Про нас </a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#contacts" class="navigation__link"> Контакти </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__bottom schedule">
+            <div class="schedule__content">
+              <div class="schedule__info">
+                <p class="schedule__title">Графік роботи</p>
+                <div class="schedule__text">
+                  <ul class="schedule__list">
+                    <li class="schedule__item">
+                      <strong>12:00 — 20:00</strong>
+                      середа
+                    </li>
+                    <li class="schedule__item">
+                      <strong>12:00 — 20:00</strong>
+                      четвер
+                    </li>
+                    <li class="schedule__item">
+                      <strong>12:00 — 20:00</strong>
+                      п’ятниця
+                    </li>
+                    <li class="schedule__item">
+                      <strong>11:00 — 19:00</strong>
+                      субота
+                    </li>
+                    <li class="schedule__item">
+                      <strong>11:00 — 19:00</strong>
+                      неділя
+                    </li>
+                  </ul>
                 </div>
-                <div class="schedule__additional-info">
-                  <strong>Вихідні:</strong>
-                  понеділок, вівторок
-                  <br>
-                  Каса припиняє роботу за 1 годину до закриття музею
-                </div>
+              </div>
+              <div class="schedule__additional-info">
+                <strong>Вихідні:</strong>
+                понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до закриття музею
               </div>
             </div>
           </div>
@@ -115,7 +119,7 @@
           <div class="event__cards card">
             <article class="card__block">
               <div class="card__image">
-                <img src="/images/events-block/pictupe.png" alt="picture">
+                <img src="/src/images//events-block/pictupe.png" alt="picture">
               </div>
               <div class="card__description">
                 <div class="card__info">
@@ -132,10 +136,7 @@
             </article>
             <article class="card__block">
               <div class="card__image">
-                <img
-                  src="/images/events-block/pictupe-2.png"
-                  alt="picture"
-                >
+                <img src="/src/images//events-block/pictupe-2.png" alt="picture">
               </div>
               <div class="card__description">
                 <div class="card__info">
@@ -171,25 +172,16 @@
           <h2 class="gallery__title">Галерея</h2>
           <div class="gallery__block">
             <div class="gallery__photo">
-              <img src="/images/gallery-block/picture.png" alt="picture" >
+              <img src="/src/images//gallery-block/picture.png" alt="picture">
             </div>
             <div class="gallery__photo">
-              <img
-                src="/images/gallery-block/picture-2.png"
-                alt="picture"
-              >
+              <img src="/src/images//gallery-block/picture-2.png" alt="picture">
             </div>
             <div class="gallery__photo">
-              <img
-                src="/images/gallery-block/picture-3.png"
-                alt="picture"
-              >
+              <img src="/src/images//gallery-block/picture-3.png" alt="picture">
             </div>
             <div class="gallery__photo">
-              <img
-                src="/images/gallery-block/picture-4.png"
-                alt="picture"
-              >
+              <img src="/src/images//gallery-block/picture-4.png" alt="picture">
             </div>
           </div>
           <div class="swiper">
@@ -197,16 +189,16 @@
             <div class="swiper-wrapper">
               <!-- Slides -->
               <div class="swiper-slide">
-                <img src="images/gallery-block/picture.png" alt="picture">
+                <img src="/src/images/gallery-block/picture.png" alt="picture">
               </div>
               <div class="swiper-slide">
-                <img src="images/gallery-block/picture-5.png" alt="picture">
+                <img src="/src/images/gallery-block/picture-5.png" alt="picture">
               </div>
               <div class="swiper-slide">
-                <img src="images/gallery-block/picture-3.png" alt="picture">
+                <img src="/src/images/gallery-block/picture-3.png" alt="picture">
               </div>
               <div class="swiper-slide">
-                <img src="images/gallery-block/picture-4.png" alt="picture">
+                <img src="/src/images/gallery-block/picture-4.png" alt="picture">
               </div>
             </div>
             <div class="swiper-pagination"></div>
@@ -223,6 +215,7 @@
           </div>
           <form
             action="submit-page.php"
+            onsubmit="this.reset(); return false;"
             class="subscription__form"
             method="get"
             name="email"
@@ -232,7 +225,7 @@
               type="email"
               placeholder="E-mail"
               required
-            >
+           >
             <button class="subscription__btn"></button>
           </form>
         </div>
@@ -247,7 +240,7 @@
           <div class="footer__info">
             <div class="footer__logo-and-social">
               <a href="#" class="footer__logo">
-                <img src="/images/footer-logo.svg" alt="logo">
+                <img src="/src/images//footer-logo.svg" alt="logo">
               </a>
               <div class="social">
                 <a
@@ -255,20 +248,14 @@
                   href="https://www.facebook.com/"
                   target="_blank"
                 >
-                  <img
-                    src="/images/icons/facebook-logo.svg"
-                    alt="facebook"
-                  >
+                  <img src="/src/images//icons/facebook-logo.svg" alt="facebook">
                 </a>
                 <a
                   class="social__facebook"
                   href="https://www.instagram.com"
                   target="_blank"
                 >
-                  <img
-                    src="/images/icons/instagram-logo.svg"
-                    alt="instagram"
-                  >
+                  <img src="/src/images//icons/instagram-logo.svg" alt="instagram">
                 </a>
               </div>
             </div>
@@ -340,10 +327,10 @@
               </nav>
               <a href="#home" class="footer__button">
                 <img
-                  src="/images/icons/arrow-up.svg"
+                  src="/src/images//icons/arrow-up.svg"
                   alt="arrow"
                   class="footer__arrow-up"
-                >
+               >
               </a>
             </div>
           </div>
