add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -470,7 +470,7 @@
                     required
                   ></textarea>
                 </label>
-                <a type="submit" class="contact-us__button">Send a message</a>
+                <button type="submit" class="contact-us__button">Send a message</button>
               </form>
             </div>
           </div>
