fixed pr issues

--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
 
       <div class="page__header-buttom">
         <h1 class="page__header-buttom-title">
-          ХУДОЖНІЙ МУЗЕЙ
+          ХУДОЖНІЙ<br>МУЗЕЙ
         </h1>
 
         <div class="page__tickets">
@@ -186,6 +186,14 @@
 
     <div class="page__sections">
       <div class="container">
+        <div class="page__sidelable-wrapper">
+          <div class="page__sidelable-cont">
+            <div class="page__sidelable-line"></div>
+            <h4 class="page__sidelable-txt">
+              ПОДІЇ
+            </h4>
+          </div>
+        </div>
         <h2
           class="section__title section__title--articles"
           id="events"
