--- a/src/index.html
+++ b/src/index.html
@@ -360,11 +360,8 @@
             required
           />
 
-          <input
-            type="submit"
-            class="subscription__form__button"
-            value=" "
-          />
+          <button type="submit"
+          class="subscription__form__button"></button>
         </form>
       </section>
     </div>
@@ -524,7 +521,7 @@
 
         <div class="footer_rights">
           <p class="footer_rights__text">Designed by Zhyriada Marina</p>
-          <p class="footer_rights__text">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer_rights__text">Copyright © 2024. All Rights Reserved.</p>
         </div>
       </section>
     </div>
